[package]
name = "cloudy-rest"
version = "0.1.0"
edition = "2021"

[profile.dev]
incremental = true

[profile.release]
incremental = true
lto = true
opt-level = 3
overflow-checks = true
strip = true

[dependencies.regex]
version = "1.11.1"

[dependencies.rocket]
version = "0.5.1"

[dependencies.serde]
version = "1.0.215"