[package]
name = "cloudy-rest"
version = "0.1.0"
edition = "2021"

[profile.dev]
incremental = true

[profile.release]
incremental = true
lto = true
opt-level = 3
overflow-checks = true
strip = true

[dependencies.jsonwebtoken]
version = "9.3.0"

[dependencies.mongodb]
version = "3.1.0"

[dependencies.openssl]
version = "0.10.68"

[dependencies.openssl-sys]
version = "0.9.104"

[dependencies.regex]
version = "1.11.1"

[dependencies.rocket]
version = "0.5.1"
features = ["json"]

[dependencies.serde]
version = "1.0.216"